# HSE_CPP_YC4

./: CMakeLists.txt
A/: A1.cpp
B/: B.cpp
C/: C.cpp
D/: D.cpp
E/: E.cpp
F/: F.cpp
G/: G.cpp
H/: H.h
I/: minesweeper.h
